--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         margin: 0;
         padding: 0;
       }
+      #app {
+        width: 100vw;
+        height: 100vh;
+      }
     </style>
   </head>
   <body>
